--- a/style.css
+++ b/style.css
@@ -10,11 +10,105 @@
 
 }
 
-#header {
-    font-family: 'norsebold';
-    color:rgb(236, 218, 139);
-    font-size: 90px;
+body {
+    background: #fff;
+    font-family: 'Work Sans', sans-serif;
+    color: #323232;
+    margin: 0;
+}
+
+.brand {
+    padding-top: 0.3125rem;
+    padding-bottom: 0.3125rem;
+    margin-right: 1rem;
+    font-size: 1.25rem;
+    text-decoration: none;
+    white-space: nowrap;
+}
+
+.logo {
+    width: 20rem;
+    height: auto;
+    padding-left: 20px;
+}
+
+.navbar {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+    background:rgba(255, 249, 249, 0.884);
+    border: 1px solid rgb(196, 196, 196) !important;
+}
+
+.menu {
+    display: flex;
+    gap: 45px
+}
+.menu-list {
+    display: flex;
+    gap: 10px;
+}
+
+.navbar-item {
+    color: #111;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
+    font-weight: 500;
+    line-height: 1.5;
+    font-size: 16px;
+    font-weight: 700;
+    letter-spacing: .5px;
+    text-transform: uppercase;
+}
+
+.icon {
+    font-size: 25px;
+    vertical-align: middle;
+    color: #ce973e;
+}
+
+.search {
+    display: inline-flex;
+}
+
+.search-term {
+    width: 150px;
+    border: 3px solid #ce973e;
+    border-right: none;
+    padding: 5px;
+    height: 20px;
+    border-radius: 5px 0 0 5px;
+    outline: none;
+    color: #9DBFAF;
+}
+
+.search-term:focus{
+    color: #000;
+}
+
+.search-button {
+    width: 40px;
+    height: 36px;
+    border: 1px solid #ce973e;
+    background: #ce973e;
     text-align: center;
+    color: #fff;
+    border-radius: 0 5px 5px 0;
+    cursor: pointer;
+    font-size: 20px;
+}
+
+.wrap{
+    top: 50%;
+    left: 50%;
+}
+
+.title-head {
+    padding: 10px 220px;
+    font-family: Arial, sans-serif;
+    font-weight: 600;
+    color: black;
 }
 
 img {
@@ -28,7 +122,7 @@ img {
     display: flex;
     flex-direction: row;
     gap: 50px;
-    padding: 25px 50px 75px;
+    padding: 0 50px 75px;
     align-items: center;
     justify-content: center;
 }
@@ -95,7 +189,7 @@ ion-icon {
 }
 
 .value {
-    color: #ff4f87;
+    color: #ce973e;
     margin-left: .35em;
     vertical-align: bottom;
     font-size: 24px;
@@ -126,7 +220,7 @@ ion-icon {
 .view-recipe {
     font-family: 'Jost', sans-serif;
     display: inline-block;
-    background: #ff4f87;
+    background: #ce973e;
     padding: .45em 1em;
     width: 100%;
     text-align: center;
